--- a/index.ipynb
+++ b/index.ipynb
@@ -317,14 +317,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "def is_better(restaurant, alternative):\n",
     "    if restaurant['rating'] > alternative['rating']:\n",
     "        return True\n",
-    "    return false"
+    "    return False"
    ]
   },
   {
